# astroARIADNE

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  citations.md  customization.md  filters.md  pyproject.toml  requirements.txt  setup.py  test.py  test_bma.py
Datafiles/model_grids/: BTNextGen_DF.pkl  Phoenixv2_DF.pkl  interpolations_BTSettl.pkl  interpolations_CK04.pkl  interpolations_Kurucz.pkl  interpolations_Phoenix.pkl
Datafiles/prior/: logg_ppf.pkl  z_logg_kde.pkl
astroARIADNE/: __init__.py  config.py  error.py  fetch.py  fitter.py  isochrone.py  librarian.py  phot_utils.py  plotter.py  sed_library.py  star.py  utils.py
astroARIADNE/Datafiles/model_grids/: BOSZ_DF.pkl  BTCond_DF.pkl  BTSettl_DF.pkl  CK04_DF.pkl  Coelho_DF.pkl  Kurucz_DF.pkl  Phoenixv2_DF.pkl  SPHINX_DF.pkl  TLUSTY_DF.pkl
astroARIADNE/Datafiles/prior/: teff_ppf.pkl
astroARIADNE/librarian/: __init__.py  _adapter.py  _api.py  _filtermap.py  _hypatia.py  _qc.py
code/: Error.py  Librarian.py  Plotter.py  Star.py  fitter.py  isochrone.py  phot_utils.py  plot_utils.py  sed_library.py  test_bma.py  utils.py
docs/: api.md  citing.md  conf.py  customization.md  filters.md  guide.md  index.md  installation.md  output.md  requirements.txt  theory.md  usage.md
tests/: test_default_priors_partial_spec.py  test_filtermap.py  test_librarian_adapter.py
