[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroARIADNE"
version = "1.3.0"
description = "Bayesian Model Averaging SED fitter"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jose Vines", email = "jose.vines@ug.uchile.cl"}
]
maintainers = [
    {name = "Jose Vines", email = "jose.vines@ug.uchile.cl"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.15.0",
    "pandas>=2.2.0",
    "numba>=0.61.0",
    "astropy>=7.0.0",
    "astroquery>=0.4.9",
    "regions>=0.10",
    "PyAstronomy>=0.22.0",
    "tqdm>=4.67.0",
    "matplotlib>=3.10.0",
    "termcolor>=2.5.0",
    "extinction>=0.4.7",
    "pyphot>=1.6.0",
    "dustmaps>=1.0.13",
    "dynesty>=2.1.0",
    "corner>=2.2.3",
    "h5py>=3.12.0",
    "tabulate>=0.9.0",
    "isochrones>=2.1"
]

[project.urls]
Homepage = "https://github.com/jvines/astroARIADNE"

[tool.setuptools]
packages = ["astroARIADNE"]

[tool.setuptools.package-data]
astroARIADNE = ["Datafiles/**/*"]
